--- a/css/style.css
+++ b/css/style.css
@@ -39,24 +39,16 @@ li a {
     min-height:6.25rem;
 }
 
-.dashed-black-border {
-    /* debug variable */
-    border: 3px dashed black;
-}
-
 /* HEADER */
 
 header {
-    background-color: lightskyblue;
-    
+    background-color: rgb(37 94 233);
+
 }
 
 .navbar {
     display: flex;
     min-height: 3.125rem;
-    background-color: orange;
-
-
 }
 
 .nav-item {
@@ -108,7 +100,6 @@ header {
     width:60%;
     /* debug variable */
     min-height:300px ;
-    background-color: pink;
 }
 /* MAIN */
 
@@ -192,7 +183,6 @@ footer {
 .small {
     width: calc(100% / 6);
     background-color: aquamarine;
-    border: 3px dashed white;
 }
 
 .second-footer-section{
@@ -210,18 +200,14 @@ footer {
 }
 
 .footer-logo {
-    background-color: lightcoral;
     font-size: 1.5rem;
     padding: 5px;
     /* debug variable */
-    border: 2px dashed black;
 
 }
 
 .btn {
-    background-color: lightcoral;
     font-size: 1.5rem;
     padding: 5px;
     /* debug variable */
-    border: 2px dashed black;
 }
