--- a/css/style.css
+++ b/css/style.css
@@ -231,59 +231,93 @@ header {
 /* FOOTER */
 
 footer {
-    background-color: rgb(40, 37, 37);
+    background-color: rgb(35 39 42);
+    color: white;
   
 }
 
 .first-footer-section {
     padding:10px 0 40px 0;
-    border-bottom:2px solid white
     
 }
 
 
 .footer-div {
-    /* debug variable */
     min-height: 400px;
     
 }
 
-.big {
-    background-color: pink;
-    width: calc((100% / 6)*2);
-    
 
+/* big col */
+.big {
+    width: calc((100% / 6)*2);
+    padding-top: 60px;
+}
+
+.big h4 {
+    color: hsl(226.73deg 58.43% 65.1%);
+    font-size: 1.4rem;
+    margin-bottom: 0.625rem;
 
 }
 
+.big img {
+    width:1.3rem;
+    padding-right: 5px;
+}
+
+.big span {
+    font-size: 0.7rem;
+}
+
+.icons i {
+    padding-right: 0.625rem;
+    margin-top: 0.625rem;
+}
+/* /big col */
+
+
+/* small col */
 .small {
     width: calc(100% / 6);
-    background-color: aquamarine;
+    padding-top: 60px;
+    font-size: 0.7rem;
+    line-height: 2rem;
+    padding-left:40px
 }
 
+
+.small h4 {
+    font-size: 0.7;
+    color: hsl(226.73deg 58.43% 65.1%);
+}
+
+
 .second-footer-section{
-    padding:40px 0 0 0;
+    border-top: 2px solid hsl(226.73deg 58.43% 65.1%);
 
 }
 
 .footer-div-bottom {
-    background-color: aquamarine;
     width: 100%;
     justify-content: space-between;
-    align-items: center;
-    /* debug variable */
-    height: 80px;
+    align-items: flex-start;
+    min-height: 100px;
+    margin-top: 15px;
 }
 
 .footer-logo {
-    font-size: 1.5rem;
-    padding: 5px;
-    /* debug variable */
-
+   width: 100px;
 }
 
-.btn {
+
+.sign-up {
     font-size: 1.5rem;
-    padding: 5px;
-    /* debug variable */
+    display: inline-block;
+    border-radius: 15px;
+    text-decoration: none;
+    padding:8px 12px;
+    font-size: 0.8rem;
+    background-color: rgb(114 137 218 );
+    color: white;
 }
