--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,22 @@ body {
     display: flex;
 }
 
+.reverse-wave {
+    width: 100%;
+    transform: rotate(180deg);
+    position: absolute;
+    background-color: rgb(246 246 246);
+
+}
+
+.wave-1hkxOo {
+    width: 100%;
+    background-color: rgb(246 246 246);
+    position: absolute;
+}
+
+
+
 ul {
     list-style-type: none;
 
@@ -40,7 +56,6 @@ li a {
 
 .wrapper {
     align-items: center;
-    /* debug variable */
     min-height:5rem;
 }
 
@@ -151,7 +166,8 @@ header {
 
 /* sections */
 .section {
-    padding:50px 0;
+    padding-top:80px;
+    padding-bottom:50px;
     justify-content: center;
     align-items: center;
 }
@@ -159,8 +175,8 @@ header {
 
 
 .gray-section {
-    /* debug variabel */
     background-color: rgb(246 246 246);
+    padding-top: 50px;
 
 }
 
@@ -188,7 +204,7 @@ header {
  /* main-content */
 
 .last-section {
-    padding-top: 40px;
+    padding-top: 80px;
 }
 
  .last-section h3 {
@@ -200,6 +216,7 @@ header {
   .last-section p {
       line-height: 1.2rem;
       font-size: 0.7rem;
+      margin:0 50px
   }
 
 
