--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ header {
     background-repeat:no-repeat;
     color: white;
     text-align: center;
-    min-height: 600px;
+    background-position: center;
 }
 
 
