--- a/css/style.css
+++ b/css/style.css
@@ -214,15 +214,12 @@ header {
     font-size: 2rem;
     text-align: center;
     margin-bottom: 1.5rem;
-    padding-left:10px;
-    padding-right: 80px;
    }
   
   .last-section p {
       line-height: 1.8rem;
       font-size: 1rem;
-      padding-left:20px;
-      padding-right: 150px;
+      text-align: center;
   }
 
   
